--- a/panel.find/index.css
+++ b/panel.find/index.css
@@ -1,15 +1,9 @@
 :host {
     padding-left: 10px;
     padding-right: 10px;
-
-    height: auto;
 }
 
-.container {
+.main {
     height: 100%;
     overflow-y: auto;
-}
-
-ui-box-container {
-    min-height: 50px;
 }
